@@ -19,3 +19,5 @@ remove = strict
 remove = warnings
 remove = base
 remove = PlugAuth::Plugin::LDAP
+
+[Author::Plicease::Tests]
